# the-construct-bbs

./: .gitignore  CLAUDE.md  README.md  config.toml  dev.ps1  dev.sh  run.ps1  run.sh
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/src/: config.rs  main.rs
backend/src/auth/: email.rs  mod.rs  password.rs  session.rs  validation.rs
backend/src/connection/: ceremony.rs  chat_manager.rs  mod.rs  node_manager.rs  timer.rs
backend/src/db/: login_attempts.rs  messages.rs  mod.rs  pool.rs  schema.sql  session_history.rs  user.rs  verification.rs
backend/src/game/: data.rs  economy.rs  events.rs  mod.rs  quest.rs  render.rs  screen.rs  state.rs
backend/src/games/: mod.rs
backend/src/games/acromania/: data.rs  game.rs  lobby.rs  mod.rs  profanity.rs  render.rs  scoring.rs  state.rs
backend/src/games/chess/: board.rs  mod.rs  moves.rs  render.rs  screen.rs  state.rs  tests.rs
backend/src/games/cradle/: data.rs  economy.rs  events.rs  mod.rs  render.rs  screen.rs  state.rs  tick.rs
backend/src/games/depths_of_diablo/: combat.rs  data.rs  dungeon.rs  items.rs  lobby.rs  mod.rs  render.rs  screen.rs  state.rs
backend/src/games/dragon_slayer/: combat.rs  data.rs  events.rs  igm.rs  mod.rs  render.rs  romance.rs  screen.rs  state.rs
backend/src/games/dystopia/: data.rs  economy.rs  military.rs  mod.rs  render.rs  screen.rs  state.rs  tick.rs
backend/src/games/fortress/: data.rs  dwarves.rs  jobs.rs  mod.rs  render.rs  screen.rs  state.rs  terrain.rs  tick.rs
backend/src/games/kyrandia/: data.rs  (+11 more)
backend/src/menu/: config.rs  mod.rs  quotes.rs  render.rs  state.rs
backend/src/services/: chat.rs  example.rs  goodbye.rs  last_callers.rs  login.rs  mail.rs  mod.rs  news.rs  profile.rs  registration.rs  registry.rs  user_profile.rs  welcome_art.rs  who.rs
backend/src/terminal/: ansi.rs  mod.rs  paging.rs
backend/src/websocket/: mod.rs  protocol.rs  session.rs
tools/map_tools/: Cargo.toml
tools/map_tools/src/: expand_map.rs  render_map.rs  shift_map.rs
tools/ralnar_converter/: Cargo.toml
tools/ralnar_converter/src/: lib.rs  main.rs  mmi.rs  mmm.rs  mon.rs  nmf.rs  palette.rs  pic.rs  scaling.rs  tileset.rs
(+923 files in other folders)
