[package]
name = "bbs-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
codepage-437 = "0.1"
tower-http = { version = "0.6", features = ["fs", "cors"] }
thiserror = "1"
