[package]
name = "bbs-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
codepage-437 = "0.1"
tower-http = { version = "0.6", features = ["fs", "cors"] }
thiserror = "1"
futures-util = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
argon2 = "0.5"
uuid = { version = "1.11", features = ["v4", "fast-rng"] }
rustrict = "0.7"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder"] }

# Optimize dependencies even in debug builds (our code stays unoptimized for fast compile)
[profile.dev.package."*"]
opt-level = 1
