[package]
name = "map_tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "render-map"
path = "src/render_map.rs"

[[bin]]
name = "shift-map"
path = "src/shift_map.rs"

[[bin]]
name = "expand-map"
path = "src/expand_map.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
image = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
