[package]
name = "ralnar_converter"
version = "0.1.0"
edition = "2021"
description = "Asset conversion tools for Realm of Ralnar (1996 QuickBasic JRPG)"
authors = ["BBS Project"]

[dependencies]
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
